# documentation_experiment

./: 404.html  README.md  index.html  mkdocs.yml  mkdocs_requirements.txt  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: main.yml
code_documentation/constants/: index.html
code_documentation/dataclasses/: index.html
code_documentation/documentation_experiment/: index.html
docs/: extra.css  index.md
docs/code_documentation/: constants.md  dataclasses.md  documentation_experiment.md
documentation_experiment/: constants.py  dataclasses.py  greetings.py
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/code_documentation/documentation_experiment/: index.html
site/search/: search_index.json
tests/: test_documenation_experiment.py
