[tool.poetry]
name = "documenation-experiment"
version = "0.1.0"
description = ""
authors = ["Isabell Kiral <isabell.kiral@cultureamp.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.16"
mknotebooks = "^0.7.1"
mkdocs-minify-plugin = "^0.5.0"
mkdocs-git-revision-date-localized-plugin = "^1.0.1"
mkdocs-git-authors-plugin = "^0.6.4"
pytkdocs = "^0.16.1"
Pygments = "^2.12.0"
mkdocs-autorefs = "^0.4.1"
mkdocstrings-python = "^0.7.0"
black = "^22.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
